# hgba

./: .gitignore  README.md  hgba.cabal  stack.yaml
app/: Main.hs
src/: .Boolean.hs.swp  .Instruction.hs.swp  .StatusRegisters.hs.swp  Bits.hs  Boolean.hs  CPU.hs  Cond.hs  Decode.hs  Decoder.hs  Execute.hs  GBA.hs  GPU.hs  Getters.hs  Imperative.hs  Instruction.hs  Instruction_old.hs  Memory.hs  Mutable.hs  Processor.hs  Register.hs  StatusRegisters.hs  Test.hs  Types.hs  Util.hs
