name:                hgba
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hgba#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2
  exposed-modules:     CPU
                     , Decode
                     , Execute
                     , GPU
                     , Imperative
                     , Memory
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , sdl2 >= 2.1.1
                     , linear
  default-language:    Haskell2010

executable hgba-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , hgba
                     , sdl2 >= 2.1.1
                     , linear
  default-language:    Haskell2010

test-suite hgba-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hgba
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hgba
